Make `ProjectFileHashCache`s operate on relative paths
Summary:
This changes `ProjectFileHashCache` to operate exclusively on
relative paths rooted at their wrapper `ProjectFilesystem`, which
avoids unnecessary operations to merge and un-merge paths.

Test Plan: Updated existing tests to use relative paths.

Reviewed By: Coneko

fbshipit-source-id: 611d19a